# selectz

./: .coveragerc  .gitignore  LICENSE  Makefile.am  README.md  configure.ac
selectz/: __init__.py  selectz.py
tests/: selectz_test.py
